<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="370dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/sorting_dialog_shape"
    android:padding="10dp">

    <TextView
        android:id="@+id/sort_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/sortTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <RadioButton
        android:id="@+id/sort_default"
        android:textSize="11sp"
        android:layout_width="235dp"
        android:layout_height="30dp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:text="@string/defaultSort"
        app:layout_constraintTop_toBottomOf="@id/sort_title"
        app:layout_constraintStart_toStartOf="@id/sort_title"/>

    <RadioButton
        android:id="@+id/sort_size_asc"
        android:layout_width="235dp"
        android:layout_height="30dp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:text="@string/sizeAsc"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@id/sort_title"
        app:layout_constraintTop_toBottomOf="@id/sort_default" />

    <RadioButton
        android:id="@+id/sort_size_desc"
        android:layout_width="235dp"
        android:layout_height="30dp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:textSize="11sp"
        android:text="@string/sizeDesc"
        app:layout_constraintTop_toBottomOf="@id/sort_size_asc"
        app:layout_constraintStart_toStartOf="@id/sort_title"/>
    <RadioButton
        android:id="@+id/sort_date_asc"
        android:layout_width="235dp"
        android:layout_height="30dp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:textSize="11sp"
        android:text="@string/DateAsc"
        app:layout_constraintTop_toBottomOf="@id/sort_size_desc"
        app:layout_constraintStart_toStartOf="@id/sort_title"/>

    <RadioButton
        android:id="@+id/sort_date_desc"
        android:layout_width="235dp"
        android:layout_height="30dp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:text="@string/DateDesc"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@id/sort_title"
        app:layout_constraintTop_toBottomOf="@id/sort_date_asc" />

    <TextView
        android:id="@+id/filter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/filterTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sort_date_desc"/>

    <CheckBox
        android:id="@+id/filter_any"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:text="@string/anyExtension"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@id/filter_title"
        app:layout_constraintTop_toBottomOf="@id/filter_title"/>

    <CheckBox
        android:id="@+id/filter_doc"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:text="@string/docExtension"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@id/filter_title"
        app:layout_constraintTop_toBottomOf="@id/filter_any"/>

    <CheckBox
        android:id="@+id/filter_jpg"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:text="@string/jpgExtension"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@id/filter_title"
        app:layout_constraintTop_toBottomOf="@id/filter_doc"/>

    <CheckBox
        android:id="@+id/filter_pdf"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:text="@string/pdfExtension"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@id/filter_any"
        app:layout_constraintTop_toBottomOf="@id/filter_title"/>

    <CheckBox
        android:id="@+id/filter_png"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:text="@string/pngExtension"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@id/filter_any"
        app:layout_constraintTop_toBottomOf="@id/filter_pdf"/>

    <CheckBox
        android:id="@+id/filter_svg"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:text="@string/svgExtension"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@id/filter_any"
        app:layout_constraintTop_toBottomOf="@id/filter_png"/>

    <CheckBox
        android:id="@+id/filter_mp3"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:layout_marginStart="5dp"
        android:text="@string/mp3Extension"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@id/filter_pdf"
        app:layout_constraintTop_toBottomOf="@id/filter_title"/>

    <CheckBox
        android:id="@+id/filter_txt"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:text="@string/txtExtension"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@id/filter_pdf"
        app:layout_constraintTop_toBottomOf="@id/filter_mp3"/>

    <CheckBox
        android:id="@+id/filter_zip"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:text="@string/zipExtension"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@id/filter_pdf"
        app:layout_constraintTop_toBottomOf="@id/filter_txt"/>

    <Button
        android:id="@+id/apply_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:layout_marginTop="7dp"
        android:textSize="13sp"
        android:backgroundTint="#509EDC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_zip"/>

</androidx.constraintlayout.widget.ConstraintLayout>