<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/main_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/ic_baseline_home_24"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintStart_toStartOf="@id/text_title"/>

    <TextView
        android:id="@+id/path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="11sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/home"
        app:layout_constraintBottom_toBottomOf="@id/home"
        app:layout_constraintStart_toEndOf="@id/home"/>

    <ImageView
        android:id="@+id/sort_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_baseline_sort_24"
        app:layout_constraintTop_toTopOf="@id/text_title"
        app:layout_constraintBottom_toBottomOf="@id/text_title"
        app:layout_constraintStart_toEndOf="@id/text_title"/>

    <TextView
        android:id="@+id/sort_text"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:text="@string/defaultSort"
        app:layout_constraintStart_toEndOf="@id/sort_button"
        app:layout_constraintTop_toTopOf="@id/sort_button"/>

    <ImageView
        android:id="@+id/filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:src="@drawable/ic_baseline_filter_alt_24"
        app:layout_constraintTop_toTopOf="@id/text_title"
        app:layout_constraintBottom_toBottomOf="@id/text_title"
        app:layout_constraintStart_toEndOf="@id/sort_text"/>

    <TextView
        android:id="@+id/filter_text"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:text="@string/anyExtension"
        app:layout_constraintStart_toEndOf="@id/filter_button"
        app:layout_constraintTop_toTopOf="@id/filter_button"
        app:layout_constraintBottom_toBottomOf="@id/filter_button"/>

    <TextView
        android:id="@+id/text_null_files"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/null_files"
        android:textSize="15sp"
        android:visibility="invisible"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/path"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/files"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="65dp"
        android:overScrollMode="never"
        app:layout_constraintTop_toBottomOf="@id/home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>